# aoc20

./: .gitignore  CMakeLists.txt
d1/: main.cxx
d2/: main.cxx
d3/: main.cxx
